src/test/ui/attrs-with-no-formal-in-generics/attrs-with-no-formal-in-generics-2.stderr
error: trailing attribute after type parameters
  --> $DIR/attrs-with-no-formal-in-generics-2.rs:19:35
   |
LL | impl<#[rustc_1] 'a, #[rustc_2] T, #[oops]> RefAny<'a, T> {}
   |                                   ^^^^^^^

error: aborting due to previous error

